--- a/Minesweeper/Minesweeper.csproj
+++ b/Minesweeper/Minesweeper.csproj
@@ -60,11 +60,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums.cs" />
+    <Compile Include="Field.cs" />
     <Compile Include="ItemClick.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="MenuComponent.cs" />
     <Compile Include="MenuItem.cs" />
-    <Compile Include="MinesweeperGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
