--- a/Minesweeper/Minesweeper.csproj
+++ b/Minesweeper/Minesweeper.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=e92a8b81eba7ceb7, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Field.cs" />
